test/e2e/features/agentgateway/mcp/testdata/auth0-mock-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth0-mock
  labels:
    app.kubernetes.io/name: auth0-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth0-mock
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth0-mock
    spec:
      containers:
        - name: dummy-auth0
          image: ghcr.io/kgateway-dev/dummy-auth0:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth0-mock
spec:
  selector:
    app.kubernetes.io/name: auth0-mock
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
